--- a/ankur/index.html
+++ b/ankur/index.html
@@ -40,6 +40,7 @@
         .silex-id-1474394621032-2 {
             min-height: 600px;
             background-color: transparent;
+            background-image: url('images/38676157-education-wallpapers.jpg');
         }
         
         .silex-id-1478366450713-3 {
@@ -78,12 +79,14 @@
 
 
 
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.2" data-silex-viewport="">
+
     <style id="current-page-style">
         .page-page-1 {
             display: inherit;
         }
     </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.2" data-silex-viewport="">
     <!-- Silex HEAD tag do not remove -->
     <!-- End of Silex HEAD tag do not remove -->
 </head>
@@ -121,6 +124,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
