--- a/ankur/index.html
+++ b/ankur/index.html
@@ -35,12 +35,12 @@
         .silex-id-1474394621033-3 {
             top: 5px;
             left: 0px;
+            background-image: url('images/38676157-education-wallpapers.jpg');
         }
         
         .silex-id-1474394621032-2 {
             min-height: 600px;
             background-color: transparent;
-            background-image: url('images/38676157-education-wallpapers.jpg');
         }
         
         .silex-id-1478366450713-3 {
@@ -63,7 +63,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px","background-image":"url('images/38676157-education-wallpapers.jpg')"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","background-image":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"}},"mobile":{},"componentData":{}}]
     </script>
 
 
