--- a/ankur/index.html
+++ b/ankur/index.html
@@ -98,7 +98,7 @@
             display: inherit;
         }
     </style>
-    <!-- Silex HEAD tag do not remove -->Hello
+    <!-- Silex HEAD tag do not remove -->
     <!-- End of Silex HEAD tag do not remove -->
 </head>
 
