--- a/ankur/index.html
+++ b/ankur/index.html
@@ -25,7 +25,6 @@
             top: 100px;
             left: NaNpx;
             background-color: transparent;
-            background-image: url('images/Mental-Retardation-In-Children.jpg');
             background-size: cover;
             background-attachment: scroll;
             background-position: center center;
@@ -105,7 +104,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgba(255,255,255,1)","background-image":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","opacity":""},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent","background-image":"url('images/Mental-Retardation-In-Children.jpg')","background-size":"cover","background-attachment":"scroll","background-position":"center center","opacity":""},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1518940288119-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518940288119-1":{"top":"200px","left":"NaNpx","background-image":"url('images/about-canon-csr-landing-header-d.jpg')"},"silex-id-1518940538589-4":{"min-height":"404px","background-color":"rgba(255,255,255,1)","background-image":"","top":"15px","left":"100px","width":"960px"},"silex-id-1518940538589-3":{"top":"575px","left":"5px","background-image":"url('images/38676157-education-wallpapers.jpg')","min-width":"960px"},"silex-id-1518943363833-6":{"min-height":"400px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518943401085-7":{"width":"786px","background-color":"rgb(255, 255, 255)","min-height":"82px","top":"406px","left":"76px"},"silex-id-1518943493934-8":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1518946882944-9":{"width":"189px","min-height":"93px","top":"4px","left":"322px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgba(255,255,255,1)","background-image":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","opacity":""},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent","background-image":"","background-size":"cover","background-attachment":"scroll","background-position":"center center","opacity":""},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1518940288119-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518940288119-1":{"top":"200px","left":"NaNpx","background-image":"url('images/about-canon-csr-landing-header-d.jpg')"},"silex-id-1518940538589-4":{"min-height":"404px","background-color":"rgba(255,255,255,1)","background-image":"","top":"15px","left":"100px","width":"960px"},"silex-id-1518940538589-3":{"top":"575px","left":"5px","background-image":"url('images/38676157-education-wallpapers.jpg')","min-width":"960px"},"silex-id-1518943363833-6":{"min-height":"400px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518943401085-7":{"width":"786px","background-color":"rgb(255, 255, 255)","min-height":"82px","top":"406px","left":"76px"},"silex-id-1518943493934-8":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1518946882944-9":{"width":"189px","min-height":"93px","top":"4px","left":"322px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -156,7 +155,7 @@
             <div data-silex-type="text" class="editable-style silex-id-1518946882944-9 text-element" data-silex-id="silex-id-1518946882944-9" style="">
                 <div class="silex-element-content normal">
                     <p style="text-align: center;">
-                        <font class="normal" size="7" color="#ffffff" face="Oswald"><b style="">ANKUR</b></font>
+                        <font class="normal" face="Sarina" size="7"><b style="" class="normal">ankur</b></font>
                     </p>
                 </div>
             </div>
