--- a/ankur/index.html
+++ b/ankur/index.html
@@ -113,7 +113,7 @@
 
 
     <style id="current-page-style">
-        .page-home {
+        .page-about-us {
             display: inherit;
         }
     </style>
@@ -128,7 +128,7 @@
                 class="silex-element-content">
         </div>
 
-        <a id="page-home" data-silex-type="page" class="page-element page-link-active">Home</a><a id="page-about-us" data-silex-type="page" class="page-element">About Us</a></div>
+        <a id="page-home" data-silex-type="page" class="page-element">Home</a><a id="page-about-us" data-silex-type="page" class="page-element page-link-active">About Us</a></div>
 
 
 
@@ -195,7 +195,7 @@
             </div>
         </div>
     </div>
-    <div data-silex-type="text" class="editable-style silex-id-1519138992947-5 text-element page-home paged-element" data-silex-id="silex-id-1519138992947-5">
+    <div data-silex-type="text" class="editable-style silex-id-1519138992947-5 text-element page-about-us paged-element" data-silex-id="silex-id-1519138992947-5">
         <div class="silex-element-content normal">about us page</div>
     </div>
 </body>
