--- a/ankur/index.html
+++ b/ankur/index.html
@@ -134,7 +134,7 @@
 
 
     <style id="current-page-style">
-        .page-home {
+        .page-about-us {
             display: inherit;
         }
     </style>
@@ -149,7 +149,7 @@
                 class="silex-element-content">
         </div>
 
-        <a id="page-home" data-silex-type="page" class="page-element page-link-active">Home</a><a id="page-about-us" data-silex-type="page" class="page-element">About Us</a></div>
+        <a id="page-home" data-silex-type="page" class="page-element">Home</a><a id="page-about-us" data-silex-type="page" class="page-element page-link-active">About Us</a></div>
 
 
 
@@ -176,7 +176,7 @@
             <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-home paged-element" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
                 <div class="silex-element-content normal">Home</div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7 page-home paged-element" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
+            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7 page-home paged-element page-link-active" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
                 <div class="silex-element-content normal">About Us</div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1519139222627-8 page-home paged-element" data-silex-id="silex-id-1519139222627-8" style="">
@@ -206,7 +206,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1518940288119-1" data-silex-id="silex-id-1518940288119-1" style="">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1518940288119-1 page-about-us paged-element" data-silex-id="silex-id-1518940288119-1" style="">
         <div data-silex-type="container" class="editable-style silex-element-content silex-container-content container-element prevent-draggable website-width silex-id-1518940288119-2" data-silex-id="silex-id-1518940288119-2">
 
         </div>
