--- a/ankur/index.html
+++ b/ankur/index.html
@@ -136,7 +136,7 @@
 
 
     <style id="current-page-style">
-        .page-about-us {
+        .page-home {
             display: inherit;
         }
     </style>
@@ -151,7 +151,7 @@
                 class="silex-element-content">
         </div>
 
-        <a id="page-home" data-silex-type="page" class="page-element">Home</a><a id="page-about-us" data-silex-type="page" class="page-element page-link-active">About Us</a></div>
+        <a id="page-home" data-silex-type="page" class="page-element page-link-active">Home</a><a id="page-about-us" data-silex-type="page" class="page-element">About Us</a></div>
 
 
 
@@ -175,10 +175,10 @@
                     <font size="5">school</font>
                 </div>
             </div>
-            <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-home paged-element" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
+            <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-home paged-element page-link-active" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
                 <div class="silex-element-content normal">Home</div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7 page-home paged-element page-link-active" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
+            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7 page-home paged-element" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
                 <div class="silex-element-content normal">About Us</div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1519139222627-8 page-home paged-element" data-silex-id="silex-id-1519139222627-8" style="">
