--- a/ankur/index.html
+++ b/ankur/index.html
@@ -82,7 +82,6 @@
         .silex-id-1518940288119-2 {
             min-height: 500px;
             background-color: transparent;
-            background-image: url('images/chesdeg-petroleum-company-limited-26-09-2017-social-responsibility.jpg');
             background-size: cover;
         }
         
@@ -113,7 +112,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgba(255,255,255,1)","background-image":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","opacity":""},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent","background-image":"","background-size":"cover","background-attachment":"scroll","background-position":"center center","opacity":""},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1518940288119-2":{"min-height":"500px","background-color":"transparent","background-image":"url('images/chesdeg-petroleum-company-limited-26-09-2017-social-responsibility.jpg')","background-size":"cover"},"silex-id-1518940288119-1":{"top":"200px","left":"NaNpx","background-image":"url('images/about-canon-csr-landing-header-d%20(1').jpg')","background-size":"cover","background-repeat":"no-repeat","background-attachment":"scroll"},"silex-id-1518940538589-4":{"min-height":"404px","background-color":"rgba(255,255,255,1)","background-image":"","top":"15px","left":"100px","width":"960px"},"silex-id-1518943363833-6":{"min-height":"400px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518943493934-8":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1518946882944-9":{"width":"189px","min-height":"93px","top":"4px","left":"322px"},"silex-id-1519137898261-0":{"width":"90px","min-height":"42px","top":"46px","left":"501px"},"silex-id-1519138566422-4":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1519138566422-3":{"width":"786px","background-color":"rgb(255, 255, 255)","min-height":"82px","top":"406px","left":"76px"},"silex-id-1519138566422-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1519138992947-5":{"width":"100px","min-height":"100px","top":"384px","left":"490px"},"silex-id-1519139175859-6":{"width":"71px","min-height":"27px","top":"78px","left":"83px"},"silex-id-1519139203424-7":{"width":"71px","min-height":"27px","top":"78px","left":"176px"},"silex-id-1519139222627-8":{"width":"71px","min-height":"27px","top":"76px","left":"276px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgba(255,255,255,1)","background-image":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","opacity":""},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent","background-image":"","background-size":"cover","background-attachment":"scroll","background-position":"center center","opacity":""},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1518940288119-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518940288119-1":{"top":"200px","left":"NaNpx","background-image":"url('images/about-canon-csr-landing-header-d%20(1').jpg')","background-size":"cover","background-repeat":"no-repeat","background-attachment":"scroll"},"silex-id-1518940538589-4":{"min-height":"404px","background-color":"rgba(255,255,255,1)","background-image":"","top":"15px","left":"100px","width":"960px"},"silex-id-1518943363833-6":{"min-height":"400px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518943493934-8":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1518946882944-9":{"width":"189px","min-height":"93px","top":"4px","left":"322px"},"silex-id-1519137898261-0":{"width":"90px","min-height":"42px","top":"46px","left":"501px"},"silex-id-1519138566422-4":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1519138566422-3":{"width":"786px","background-color":"rgb(255, 255, 255)","min-height":"82px","top":"406px","left":"76px"},"silex-id-1519138566422-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1519138992947-5":{"width":"100px","min-height":"100px","top":"384px","left":"490px"},"silex-id-1519139175859-6":{"width":"71px","min-height":"27px","top":"78px","left":"83px"},"silex-id-1519139203424-7":{"width":"71px","min-height":"27px","top":"78px","left":"176px"},"silex-id-1519139222627-8":{"width":"71px","min-height":"27px","top":"76px","left":"276px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -136,7 +135,7 @@
 
 
     <style id="current-page-style">
-        .page-home {
+        .page-about-us {
             display: inherit;
         }
     </style>
@@ -151,7 +150,7 @@
                 class="silex-element-content">
         </div>
 
-        <a id="page-home" data-silex-type="page" class="page-element page-link-active">Home</a><a id="page-about-us" data-silex-type="page" class="page-element">About Us</a></div>
+        <a id="page-home" data-silex-type="page" class="page-element">Home</a><a id="page-about-us" data-silex-type="page" class="page-element page-link-active">About Us</a></div>
 
 
 
@@ -175,10 +174,10 @@
                     <font size="5">school</font>
                 </div>
             </div>
-            <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-home paged-element page-link-active" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
+            <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-home paged-element" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
                 <div class="silex-element-content normal">Home</div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7 page-home paged-element" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
+            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7 page-home paged-element page-link-active" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
                 <div class="silex-element-content normal">About Us</div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1519139222627-8 page-home paged-element" data-silex-id="silex-id-1519139222627-8" style="">
@@ -208,7 +207,7 @@
 
 
 
-    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1518940288119-1 page-about-us paged-element" data-silex-id="silex-id-1518940288119-1" style="">
+    <div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1518940288119-1" data-silex-id="silex-id-1518940288119-1" style="">
         <div data-silex-type="container" class="editable-style silex-element-content silex-container-content container-element prevent-draggable website-width silex-id-1518940288119-2" data-silex-id="silex-id-1518940288119-2">
 
         </div>
