--- a/ankur/index.html
+++ b/ankur/index.html
@@ -196,13 +196,13 @@
                     <font size="5">school</font>
                 </div>
             </div>
-            <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-home paged-element page-link-active" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
+            <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-link-active" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
                 <div class="silex-element-content normal">Home</div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7 page-home paged-element" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
+            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
                 <div class="silex-element-content normal">About Us</div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element silex-id-1519139222627-8 page-home paged-element" data-silex-id="silex-id-1519139222627-8" style="">
+            <div data-silex-type="text" class="editable-style text-element silex-id-1519139222627-8" data-silex-id="silex-id-1519139222627-8" style="">
                 <div class="silex-element-content normal">Photos</div>
             </div>
         </div>
