--- a/ankur/index.html
+++ b/ankur/index.html
@@ -199,7 +199,7 @@
             <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-link-active" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
                 <div class="silex-element-content normal">Home</div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7" data-silex-id="silex-id-1519139203424-7" style="">
+            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
                 <div class="silex-element-content normal">About Us</div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1519139222627-8" data-silex-id="silex-id-1519139222627-8" style="">
