--- a/ankur/index.html
+++ b/ankur/index.html
@@ -58,7 +58,7 @@
             background-image: url('images/Home.jpg');
             background-size: contain;
             background-repeat: no-repeat;
-            background-position: top right;
+            background-position: top center;
         }
         
         .silex-id-1519139203424-7 {
